# ast-project

./: .gitignore  .gitmodules  LICENSE  README.md  run_tests.sh  setup.cfg
creduce_bug_000/: PASS_BUG_INFO.TXT  tmpsrc_0.c
plotting/: data_complexity.csv  data_optimizations.csv  data_single.csv  data_timeouts.csv  extract_and_plot.py  srcreduce_cleaned.log.keep
src/plotting/: code1.data  code2.data  code3.data  code4.data  code5.data  extract_and_plot.py  log1.data  log2.data  log3.data  log4.data  log5.data  plotdata1.data  plotdata2.data  plotdata3.data  plotdata4.data  plotdata5.data  plots.py
src/srcreduce/: main.py
testing_input/: init0.c
