[metadata]
name = srcReduce
version = 0.0.1
author = Viktor Gsteiger & Nikodem Kernbach
author_email = vgsteiger@student.ethz.ch
license = MIT
description = A package to reduce the size of a source code file while maximising binary file size
url = https://github.com/vGsteiger/ast-project

[options]
python_requires = >=3.6
package_dir = 
    = src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	srcReduce = srcReduce.main:main
